Fixed hour spacing on mobile

--- a/styles.css
+++ b/styles.css
@@ -480,7 +480,7 @@ body {
     
     #section1-hours {
         flex-direction: row;
-        justify-content: center;
+        justify-content: space-evenly;
         margin: 5vw 0 1vw;
     }
     
@@ -488,13 +488,9 @@ body {
         padding: 2vw 0vw 3vw;
     }
 
-    #store {
-        padding-right: 6vw;
-        border-right: 0.5vw solid #d8d0c3;
-    }
-
-    #delivery {
-        padding-left: 6vw;
+    #hour-set-divider {
+        width: 0.5vw;
+        background: #d8d0c3;
     }
     
     .week {
